--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,6 +9,8 @@ on:
   pull_request:
     branches: [ main ]
 
+  workflow_dispatch:
+
 jobs:
   build:
 
@@ -24,3 +26,16 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+      
+    - name: Build and Push Docker
+      uses: mr-smithers-excellent/docker-build-push@v4
+      with:
+        image: edrz/demo_application
+        tags: v1.0
+        registry: docker.io
+        username: ${{secrets.DOCKER_USERNAME}} 
+        password: ${{secrets.DOCKER_PASSWORD}} 
+      
+      
+      
+      
