--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,7 +31,7 @@ jobs:
       uses: mr-smithers-excellent/docker-build-push@v4
       with:
         image: edrz/demo_application
-        tag: v1.0, latest
+        tag: latest
         registry: docker.io
         username: ${{secrets.DOCKER_USERNAME}} 
         password: ${{secrets.DOCKER_PASSWORD}} 
